--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
             <div class="float-end">
                 <div class="collapse navbar-collapse" id="collapsibleNavId">
-                    <ul class="navbar-nav me-auto mt-2 mt-lg-0">
+                    <ul class="navbar-nav">
                         <li class="nav-item active">
                             <a class="nav-link" href="#">Início<span
                                     class="visually-hidden">(current)</span></a>
