--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                             <a class="nav-link" href="#">Soluções</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Portifólio</a>
+                            <a class="nav-link" href="#">Portfólio</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">FAQ</a>
