--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 </head>
 
 <body style="background-color: #2C394B;">
-    <nav class="navbar navbar-expand-lg fixed-top|fixed-bottom|sticky-top" style="background-color: #FF5400">
-        <div class="container me-auto">
+    <nav class="navbar navbar-expand-lg fixed-top|fixed-bottom|sticky-top">
+        <div class="container me-auto ">
             <a class="navbar-brand" href="#">lejaum.me</a>
             <button class="navbar-toggler hidden-lg-up" type="button" data-bs-toggle="collapse"
                 data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
@@ -27,8 +27,7 @@
                 <div class="collapse navbar-collapse" id="collapsibleNavId">
                     <ul class="navbar-nav">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">Início<span
-                                    class="visually-hidden">(current)</span></a>
+                            <a class="nav-link" href="#">Início<span class="visually-hidden">(current)</span></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Soluções</a>
