--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>lejaum.me - Design & Marketing</title>
 </head>
 
-<body style="background-color: #2C394B;">
+<body>
     <nav class="navbar navbar-expand-lg fixed-top|fixed-bottom|sticky-top">
         <div class="container me-auto ">
             <a class="navbar-brand" href="#">lejaum.me</a>
@@ -44,11 +44,29 @@
                     </ul>
                 </div>
             </div>
-
         </div>
     </nav>
 
+    <div class="container">
+        <div class="row">
+            <div class="col-8 comeco">
+                <h1 class="titulo">Trafego + Engajamento + <br> Conversão + Retenção</h1>
+                <h2 class="subtitulo">
+                    Apareça no digital para a pessoa<br> certa no e no momento certo.<br>
+                    <br>
+                    Seja reconhecido pelo seus clientes e<br> fidelize eles.<br>
+                    <br>
+                    Nós somos a solução pra você e sua<br> empresa!<br>
+                    <br>
+                </h2>
+                <a href="#" class="botao-saibaMais">Saber Mais</a>
+            </div>
+            <div class="col-2">
+                <img id="foguete" src="images/foguetin.png" alt="foguete">
+            </div>
 
+        </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous">
