--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>lejaum.me - Design & Marketing</title>
 </head>
 
-<body>
+<body >
     <nav class="navbar navbar-expand-lg fixed-top|fixed-bottom|sticky-top">
         <div class="container me-auto ">
             <a class="navbar-brand" href="#">lejaum.me</a>
@@ -47,7 +47,7 @@
         </div>
     </nav>
 
-    <div class="container">
+    <div class="container noselect">
         <div class="row">
             <div class="col-8 comeco">
                 <h1 class="titulo">Trafego + Engajamento + <br> Conversão + Retenção</h1>
@@ -62,7 +62,7 @@
                 <a href="#" class="botao-saibaMais">Saber Mais</a>
             </div>
             <div class="col-2">
-                <img id="foguete" src="images/foguetin.png" alt="foguete">
+                <img id="foguete" src="images/foguetin.png" alt="foguete" draggable="false">
             </div>
 
         </div>
