--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
 <body >
     <nav class="navbar navbar-expand-lg fixed-top|fixed-bottom|sticky-top">
-        <div class="container me-auto ">
-            <a class="navbar-brand" href="#">lejaum.me</a>
+        <div class="container me-auto noselect" >
+            <a class="navbar-brand" href="#" draggable="false">lejaum.me</a>
             <button class="navbar-toggler hidden-lg-up" type="button" data-bs-toggle="collapse"
                 data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
                 aria-label="Toggle navigation">Menu</button>
@@ -27,19 +27,19 @@
                 <div class="collapse navbar-collapse" id="collapsibleNavId">
                     <ul class="navbar-nav">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">Início<span class="visually-hidden">(current)</span></a>
+                            <a class="nav-link" href="#" draggable="false">Início<span class="visually-hidden">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Soluções</a>
+                            <a class="nav-link" href="#" draggable="false">Soluções</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Portfólio</a>
+                            <a class="nav-link" href="#" draggable="false">Portfólio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">FAQ</a>
+                            <a class="nav-link" href="#" draggable="false">FAQ</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contato</a>
+                            <a class="nav-link" href="#" draggable="false">Contato</a>
                         </li>
                     </ul>
                 </div>
@@ -59,7 +59,7 @@
                     Nós somos a solução pra você e sua<br> empresa!<br>
                     <br>
                 </h2>
-                <a href="#" class="botao-saibaMais">Saber Mais</a>
+                <a href="#" class="botao-saiba-mais" draggable="false">Saber Mais</a>
             </div>
             <div class="col-2">
                 <img id="foguete" src="images/foguetin.png" alt="foguete" draggable="false">
