--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>lejaum.me - Design & Marketing</title>
 </head>
 
-<body >
+<body id="inicio">
     <nav class="navbar navbar-expand-lg fixed-top|fixed-bottom|sticky-top">
         <div class="container me-auto noselect" >
             <a class="navbar-brand" href="#" draggable="false">lejaum.me</a>
@@ -27,7 +27,7 @@
                 <div class="collapse navbar-collapse" id="collapsibleNavId">
                     <ul class="navbar-nav">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#" draggable="false">Início<span class="visually-hidden">(current)</span></a>
+                            <a class="nav-link" href="#inicio" draggable="false">Início<span class="visually-hidden">(current)</span></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#" draggable="false">Soluções</a>
