--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
 <body id="inicio">
     <nav class="navbar navbar-expand-lg fixed-top|fixed-bottom|sticky-top">
-        <div class="container me-auto noselect" >
-            <a class="navbar-brand" href="#" draggable="false">lejaum.me</a>
+        <div class="container me-auto noselect">
+            <a class="navbar-brand" href="#" draggable="false">lejaum</a>
             <button class="navbar-toggler hidden-lg-up" type="button" data-bs-toggle="collapse"
                 data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
                 aria-label="Toggle navigation">Menu</button>
@@ -27,7 +27,8 @@
                 <div class="collapse navbar-collapse" id="collapsibleNavId">
                     <ul class="navbar-nav">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#inicio" draggable="false">Início<span class="visually-hidden">(current)</span></a>
+                            <a class="nav-link" href="#inicio" draggable="false">Início<span
+                                    class="visually-hidden">(current)</span></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#" draggable="false">Soluções</a>
@@ -41,6 +42,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#" draggable="false">Contato</a>
                         </li>
+                        <label class="nav-item" for="switch">
+                            <input type="checkbox" id="switch"><i class="fa fa-adjust"></i>
+                        </label>
                     </ul>
                 </div>
             </div>
@@ -50,24 +54,35 @@
     <div class="container noselect">
         <div class="row">
             <div class="col-8 comeco">
-                <h1 class="titulo">Trafego + Engajamento + <br> Conversão + Retenção</h1>
+                <h1 class="titulo">NÃO VENDEMOS SERVIÇOS,</h1>>
+                <h1 class="titulo2">NÓS ENTREGAMOS SOLUÇÕES!</h1>
                 <h2 class="subtitulo">
-                    Apareça no digital para a pessoa<br> certa no e no momento certo.<br>
+                    Apareça no digital para a pessoa certa<br> no e no momento certo.<br>
                     <br>
-                    Seja reconhecido pelo seus clientes e<br> fidelize eles.<br>
+                    Seja reconhecido pelo seus clientes e fidelize eles.<br>
+                    <br>
+                    Transformamos Leads em Vendas <br>
                     <br>
                     Nós somos a solução pra você e sua<br> empresa!<br>
                     <br>
                 </h2>
-                <a href="#" class="botao-saiba-mais" draggable="false">Saber Mais</a>
+
+                <a href="#">
+                    <button class="btn-saibamais"><i class="fa fa-arrow-circle-down"></i>  Saber Mais</button>
+                </a>
+                <!-- <a href="#" class="botao-saiba-mais" draggable="false">Saber Mais</a> -->
             </div>
             <div class="col-2">
-                <img id="foguete" src="images/foguetin.png" alt="foguete" draggable="false">
+                <div class="sobe">
+                    <img class="foguete gira" src="images/foguetin.png" alt="foguete" draggable="false">
+
+                </div>
             </div>
 
         </div>
     </div>
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous">
     </script>
