--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 </head>
 
 <body id="inicio">
+    <!--  -->
+    <!-- NAVBAR -->
+    <!--  -->
     <nav class="navbar navbar-expand-lg fixed-top|fixed-bottom|sticky-top">
         <div class="container me-auto noselect">
             <a class="navbar-brand" href="#" draggable="false">lejaum</a>
@@ -31,7 +34,7 @@
                                     class="visually-hidden">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#" draggable="false">Soluções</a>
+                            <a class="nav-link" href="#solucoes" draggable="false">Soluções</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#" draggable="false">Portfólio</a>
@@ -42,45 +45,84 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#" draggable="false">Contato</a>
                         </li>
-                        <label class="nav-item" for="switch">
-                            <input type="checkbox" id="switch"><i class="fa fa-adjust"></i>
-                        </label>
                     </ul>
                 </div>
             </div>
         </div>
+        <label class="darkmode-icon" for="switch">
+            <input type="checkbox" id="switch" class="invisible"><i class="fa fa-sun-o" id="mode-icon"></i>
+        </label>
     </nav>
+    <!--  -->
+    <!-- PRIMEIRA INICIAL -->
+    <!--  -->
+    <div class="primeira-tela">
+        <div class="container noselect">
+            <div class="row">
+                <div class="col-8">
+                    <h1 class="titulo">NÃO VENDEMOS SERVIÇOS,</h1>>
+                    <h1 class="titulo2">NÓS ENTREGAMOS SOLUÇÕES!</h1>
+                    <h2 class="subtitulo">
+                        Apareça no digital para a pessoa certa<br> no e no momento certo.<br>
+                        <br>
+                        Seja reconhecido pelo seus clientes e fidelize eles.<br>
+                        <br>
+                        Transformamos Leads em Vendas <br>
+                        <br>
+                        Nós somos a solução pra você e sua<br> empresa!<br>
+                        <br>
+                    </h2>
 
-    <div class="container noselect">
-        <div class="row">
-            <div class="col-8 comeco">
-                <h1 class="titulo">NÃO VENDEMOS SERVIÇOS,</h1>>
-                <h1 class="titulo2">NÓS ENTREGAMOS SOLUÇÕES!</h1>
-                <h2 class="subtitulo">
-                    Apareça no digital para a pessoa certa<br> no e no momento certo.<br>
-                    <br>
-                    Seja reconhecido pelo seus clientes e fidelize eles.<br>
-                    <br>
-                    Transformamos Leads em Vendas <br>
-                    <br>
-                    Nós somos a solução pra você e sua<br> empresa!<br>
-                    <br>
-                </h2>
-
-                <a href="#">
-                    <button class="btn-saibamais"><i class="fa fa-arrow-circle-down"></i>  Saber Mais</button>
-                </a>
-                <!-- <a href="#" class="botao-saiba-mais" draggable="false">Saber Mais</a> -->
-            </div>
-            <div class="col-2">
-                <div class="sobe">
-                    <img class="foguete gira" src="images/foguetin.png" alt="foguete" draggable="false">
-
+                    <a href="#">
+                        <button class="btn-saibamais"><i class="fa fa-arrow-circle-down"></i> Saber Mais</button>
+                    </a>
+                    <!-- <a href="#" class="botao-saiba-mais" draggable="false">Saber Mais</a> -->
+                </div>
+                <div class="posicao-foguete">
+                    <div class="sobe">
+                        <img class="foguete gira" src="images/foguetin.png" alt="foguete" draggable="false">
+                    </div>
                 </div>
             </div>
 
         </div>
     </div>
+    <!--  -->
+    <!-- SEGUNDA TELA -->
+    <!--  -->
+    <div class="segunda-tela">
+        <div id="solucoes">
+            <div class="container noselect">
+                <div class="row">
+                    <div class="col-8">
+                        <h1 class="titulo2">Soluções</h1>
+                        <h2 class="subtitulo-bold">&emsp;Marketing</h2>
+                        <h2 class="conteudo">
+                            <strong>Análise</strong> <br>
+                            &emsp; Um dos pontos de partida é uma análise bem feita e em parceria com<br>
+                            os donos do negócio. E ao notarmos a necessidade da empresa, nós <br>
+                            desenvolvemos a estratégia de atuação e em quais canais a marca irá <br>
+                            aparecer; <br>
+                            &emsp; Planejamento é a chave mais importante para uma execução de <br>
+                            sucesso. <br>
+                        </h2>
+                        <h2 class="conteudo">
+                            <strong>Tráfego</strong> <br>
+                            &emsp; Nos primeiros passos práticos temos o *tráfego* que nada mais é que a <br>
+                            troca de verba por visibilidade, ou seja, comprar anúncios nos canais <br>
+                            escolhidos, tais como: Facebook, Instagram, Google, Youtube e entre outros;<br>
+                        </h2>
+                    </div>
+                </div>
+                <div class="posicao-grafico">
+                    <img class="grafico" src="images/grafico.png" alt="foguete" draggable="false">
+                </div>
+                <div class="espaco-em-baixo"></div>
+            </div>
+        </div>
+    </div>
+
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
