--- a/index.html
+++ b/index.html
@@ -16,10 +16,37 @@
 </head>
 
 <body id="inicio">
+<!-- teste -->
+<div class="header">
+    <div class="navbar">
+      <div class="navbar__wrapper">
+        <nav class="navbar__menu"><a class="navbar__brand" href="#">Brand<img src="#" alt="" /></a>
+          <div id="nav-icon3"><span></span><span></span><span></span><span></span></div>
+          <ul class="navbar__nav">
+            <li class="navbar__link after-transform"><a class="active" href="#">Inicio</a></li>
+            <li class="navbar__link after-transform"><a href="#">Nosotros</a></li>
+            <li class="navbar__link after-transform"><a href="#">Galeria</a></li>
+            <li class="navbar__link after-transform"><a href="#">Blog</a></li>
+            <li class="navbar__link after-transform"><a href="#">Contacto</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+    <div class="navbar-responsive">
+      <ul class="navbar-responsive__nav">
+        <li class="navbar-responsive__link after-transform"><a class="active" href="#">Inicio</a></li>
+        <li class="navbar-responsive__link after-transform"><a href="#">Nosotros</a></li>
+        <li class="navbar-responsive__link after-transform"><a href="#">Galeria</a></li>
+        <li class="navbar-responsive__link after-transform"><a href="#">Blog</a></li>
+        <li class="navbar-responsive__link after-transform"><a href="#">Contacto</a></li>
+      </ul>
+    </div>
+  </div>
+<!-- fim teste -->
     <!--  -->
     <!-- NAVBAR -->
     <!--  -->
-    <nav class="navbar navbar-expand-lg fixed-top|fixed-bottom|sticky-top">
+    <!-- <nav class="navbar navbar-expand-lg fixed-top|fixed-bottom|sticky-top">
         <div class="container me-auto noselect">
             <a class="navbar-brand" href="#" draggable="false">lejaum</a>
             <button class="navbar-toggler hidden-lg-up" type="button" data-bs-toggle="collapse"
@@ -52,7 +79,8 @@
         <label class="darkmode-icon" for="switch">
             <input type="checkbox" id="switch" class="invisible"><i class="fa fa-sun-o" id="mode-icon"></i>
         </label>
-    </nav>
+    </nav> -->
+
     <!--  -->
     <!-- PRIMEIRA INICIAL -->
     <!--  -->
@@ -122,12 +150,12 @@
         </div>
     </div>
 
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
     <script src="script.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous">
-    </script>
+    </script> -->
 </body>
 
 </html>
