--- a/index.html
+++ b/index.html
@@ -43,46 +43,9 @@
     </div>
   </div>
 <!-- fim teste -->
-    <!--  -->
-    <!-- NAVBAR -->
-    <!--  -->
-    <!-- <nav class="navbar navbar-expand-lg fixed-top|fixed-bottom|sticky-top">
-        <div class="container me-auto noselect">
-            <a class="navbar-brand" href="#" draggable="false">lejaum</a>
-            <button class="navbar-toggler hidden-lg-up" type="button" data-bs-toggle="collapse"
-                data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
-                aria-label="Toggle navigation">Menu</button>
-
-            <div class="float-end">
-                <div class="collapse navbar-collapse" id="collapsibleNavId">
-                    <ul class="navbar-nav">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#inicio" draggable="false">Início<span
-                                    class="visually-hidden">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#solucoes" draggable="false">Soluções</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#" draggable="false">Portfólio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#" draggable="false">FAQ</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#" draggable="false">Contato</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <label class="darkmode-icon" for="switch">
-            <input type="checkbox" id="switch" class="invisible"><i class="fa fa-sun-o" id="mode-icon"></i>
-        </label>
-    </nav> -->
 
     <!--  -->
-    <!-- PRIMEIRA INICIAL -->
+    <!-- PRIMEIRA TELA -->
     <!--  -->
     <div class="primeira-tela">
         <div class="container noselect">
