--- a/index.html
+++ b/index.html
@@ -16,33 +16,33 @@
 </head>
 
 <body id="inicio">
-<!-- teste -->
-<div class="header">
-    <div class="navbar">
-      <div class="navbar__wrapper">
-        <nav class="navbar__menu"><a class="navbar__brand" href="#">Brand<img src="#" alt="" /></a>
-          <div id="nav-icon3"><span></span><span></span><span></span><span></span></div>
-          <ul class="navbar__nav">
-            <li class="navbar__link after-transform"><a class="active" href="#">Inicio</a></li>
-            <li class="navbar__link after-transform"><a href="#">Nosotros</a></li>
-            <li class="navbar__link after-transform"><a href="#">Galeria</a></li>
-            <li class="navbar__link after-transform"><a href="#">Blog</a></li>
-            <li class="navbar__link after-transform"><a href="#">Contacto</a></li>
-          </ul>
-        </nav>
-      </div>
+    <!-- teste -->
+    <div class="header">
+        <div class="navbar">
+            <div class="navbar__wrapper">
+                <nav class="navbar__menu"><a class="navbar__brand" href="#">lejaum<img src="#" alt="" /></a>
+                    <div id="nav-icon3"><span></span><span></span><span></span><span></span></div>
+                    <ul class="navbar__nav">
+                        <li class="navbar__link after-transform"><a class="active" href="#">Inicio</a></li>
+                        <li class="navbar__link after-transform"><a href="#">Nosotros</a></li>
+                        <li class="navbar__link after-transform"><a href="#">Galeria</a></li>
+                        <li class="navbar__link after-transform"><a href="#">Blog</a></li>
+                        <li class="navbar__link after-transform"><a href="#">Contacto</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+        <div class="navbar-responsive">
+            <ul class="navbar-responsive__nav">
+                <li class="navbar-responsive__link after-transform"><a class="active" href="#">Inicio</a></li>
+                <li class="navbar-responsive__link after-transform"><a href="#">Nosotros</a></li>
+                <li class="navbar-responsive__link after-transform"><a href="#">Galeria</a></li>
+                <li class="navbar-responsive__link after-transform"><a href="#">Blog</a></li>
+                <li class="navbar-responsive__link after-transform"><a href="#">Contacto</a></li>
+            </ul>
+        </div>
     </div>
-    <div class="navbar-responsive">
-      <ul class="navbar-responsive__nav">
-        <li class="navbar-responsive__link after-transform"><a class="active" href="#">Inicio</a></li>
-        <li class="navbar-responsive__link after-transform"><a href="#">Nosotros</a></li>
-        <li class="navbar-responsive__link after-transform"><a href="#">Galeria</a></li>
-        <li class="navbar-responsive__link after-transform"><a href="#">Blog</a></li>
-        <li class="navbar-responsive__link after-transform"><a href="#">Contacto</a></li>
-      </ul>
-    </div>
-  </div>
-<!-- fim teste -->
+    <!-- fim teste -->
 
     <!--  -->
     <!-- PRIMEIRA TELA -->
