--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 <nav class="navbar__menu"><a class="navbar__brand" href="#">lejaum<img src="#" alt="" /></a>
                     <div id="nav-icon3"><span></span><span></span><span></span><span></span></div>
                     <ul class="navbar__nav">
-                        <li class="navbar__link after-transform"><a class="active" href="#">Início</a></li>
-                        <li class="navbar__link after-transform"><a href="#">Soluções</a></li>
+                        <li class="navbar__link after-transform"><a class="active" href="#inicio">Início</a></li>
+                        <li class="navbar__link after-transform"><a href="#solucoes">Soluções</a></li>
                         <li class="navbar__link after-transform"><a href="#">Portfólio</a></li>
                         <li class="navbar__link after-transform"><a href="#">FAQ</a></li>
                         <li class="navbar__link after-transform"><a href="#">Contato</a></li>
@@ -69,59 +69,53 @@
     <div class="primeira-tela" id="inicio">
         <div class="container noselect">
             <div class="row">
-                <div class="col-8">
-                    <h1 class="titulo">NÃO VENDEMOS SERVIÇOS,</h1>>
-                    <h1 class="titulo2">NÓS ENTREGAMOS SOLUÇÕES!</h1>
-                    <h2 class="subtitulo">
-                        Apareça no digital para a pessoa certa<br> no e no momento certo.<br>
-                        <br>
-                        Seja reconhecido pelo seus clientes e fidelize eles.<br>
-                        <br>
-                        Transformamos Leads em Vendas <br>
-                        <br>
-                        Nós somos a solução pra você e sua<br> empresa!<br>
-                        <br>
-                    </h2>
-
-                    <a href="#">
-                        <button class="btn-saibamais"><i class="fa fa-arrow-circle-down"></i> Saber Mais</button>
-                    </a>
-                    <!-- <a href="#" class="botao-saiba-mais" draggable="false">Saber Mais</a> -->
-                </div>
+                <h1 class="titulo">NÃO VENDEMOS SERVIÇOS,</h1>
+                <h1 class="titulo2">NÓS ENTREGAMOS SOLUÇÕES!</h1>
+                <h2 class="subtitulo">
+                    Apareça no digital para a pessoa certa<br> e no momento certo.<br>
+                    <br>
+                    Seja reconhecido pelo seus clientes e fidelize eles.<br>
+                    <br>
+                    Transformamos Leads em Vendas.<br>
+                    <br>
+                    Nós somos a solução pra você e sua empresa!<br>
+                    <br>
+                </h2>
+                <a href="#">
+                    <button class="btn-saibamais"  ><i class="fa fa-arrow-circle-down"></i> Saber Mais</button>
+                </a>
                 <div class="posicao-foguete">
                     <div class="sobe">
                         <img class="foguete gira" src="images/foguetin.png" alt="foguete" draggable="false">
                     </div>
                 </div>
             </div>
-
         </div>
+        <div id="solucoes"></div>
     </div>
     <!--  -->
     <!-- SEGUNDA TELA -->
     <!--  -->
-    <div class="segunda-tela" id="solucoes">
+    <div class="segunda-tela">
         <div class="container noselect">
             <div class="row">
-                <div class="col-8">
-                    <h1 class="titulo2">Soluções</h1>
-                    <h2 class="subtitulo-bold">&emsp;Marketing</h2>
-                    <h2 class="conteudo">
-                        <strong>Análise</strong> <br>
-                        &emsp; Um dos pontos de partida é uma análise bem feita e em parceria com<br>
-                        os donos do negócio. E ao notarmos a necessidade da empresa, nós <br>
-                        desenvolvemos a estratégia de atuação e em quais canais a marca irá <br>
-                        aparecer; <br>
-                        &emsp; Planejamento é a chave mais importante para uma execução de <br>
-                        sucesso. <br>
-                    </h2>
-                    <h2 class="conteudo">
-                        <strong>Tráfego</strong> <br>
-                        &emsp; Nos primeiros passos práticos temos o *tráfego* que nada mais é que a <br>
-                        troca de verba por visibilidade, ou seja, comprar anúncios nos canais <br>
-                        escolhidos, tais como: Facebook, Instagram, Google, Youtube e entre outros;<br>
-                    </h2>
-                </div>
+                <h1 class="titulo2">Soluções</h1>
+                <h2 class="subtitulo-bold">&emsp;Marketing</h2>
+                <h2 class="conteudo">
+                    <strong>Análise</strong> <br>
+                    &emsp; Um dos pontos de partida é uma análise bem feita e em parceria com<br>
+                    os donos do negócio. E ao notarmos a necessidade da empresa, nós <br>
+                    desenvolvemos a estratégia de atuação e em quais canais a marca irá <br>
+                    aparecer; <br>
+                    &emsp; Planejamento é a chave mais importante para uma execução de <br>
+                    sucesso. <br>
+                </h2>
+                <h2 class="conteudo">
+                    <strong>Tráfego</strong> <br>
+                    &emsp; Nos primeiros passos práticos temos o *tráfego* que nada mais é que a <br>
+                    troca de verba por visibilidade, ou seja, comprar anúncios nos canais <br>
+                    escolhidos, tais como: Facebook, Instagram, Google, Youtube e entre outros;<br>
+                </h2>
             </div>
             <div class="posicao-grafico">
                 <img class="grafico" src="images/grafico.png" alt="foguete" draggable="false">
