adicionado uma terceira tela e um carrossel

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <ul class="navbar__nav">
                         <li class="navbar__link after-transform"><a class="active" href="#inicio">Início</a></li>
                         <li class="navbar__link after-transform"><a href="#solucoes">Soluções</a></li>
-                        <li class="navbar__link after-transform"><a href="#">Portfólio</a></li>
+                        <li class="navbar__link after-transform"><a href="#portfolio">Portfólio</a></li>
                         <li class="navbar__link after-transform"><a href="#">FAQ</a></li>
                         <li class="navbar__link after-transform"><a href="#">Contato</a></li>
                         <label class="darkmode-icon" for="switch">
@@ -44,7 +44,7 @@
                 <li class="navbar-responsive__link after-transform"> <a href="#solucoes">
                         <button>Soluções</button>
                     </a></li>
-                <li class="navbar-responsive__link after-transform"> <a href="#inicio">
+                <li class="navbar-responsive__link after-transform"> <a href="#portfolio">
                         <button>Portfólio</button>
                     </a></li>
                 <li class="navbar-responsive__link after-transform"> <a href="#inicio">
@@ -82,7 +82,7 @@
                     <br>
                 </h2>
                 <a href="#">
-                    <button class="btn-saibamais"  ><i class="fa fa-arrow-circle-down"></i> Saber Mais</button>
+                    <button class="btn-saibamais"><i class="fa fa-arrow-circle-down"></i> Saber Mais</button>
                 </a>
                 <div class="posicao-foguete">
                     <div class="sobe">
@@ -122,6 +122,97 @@
             </div>
             <div class="espaco-em-baixo"></div>
         </div>
+        <div id="portfolio"></div>
+    </div>
+
+    <!--  -->
+    <!-- TERCEIRA TELA -->
+    <!--  -->
+    <div class="terceira-tela">
+        <div class="container noselect">
+            <div class="row">
+                <h1 class="titulo2">Portfólio</h1>
+            </div>
+        </div>
+        <div class="container-custom-carrossel noselect">
+            <div class="portfolio-carrossel">
+                <div class="track">
+                    <div class="card-custom">
+                        <div class="card-image">
+                            <img draggable="false" src="images/card/ice-cream.png" alt="">
+                            <div class="filtro">
+                                <div class="info-card">
+                                    <h2 class="titulo-card">Social Media</h2>
+                                    <p class="conteudo-card">Franquia Café Flor do Grão</p>
+                                    <button>Ver Mais</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-custom">
+                        <div class="card-image">
+                            <img draggable="false" src="images/card/chop.png" alt="">
+                            <div class="filtro">
+                                <div class="info-card">
+                                    <h2 class="titulo-card">Soxial Midea</h2>
+                                    <p class="conteudo-card">Chope do Bacana</p>
+                                    <button>Ver Mais</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-custom">
+                        <div class="card-image">
+                            <img draggable="false" src="images/card/drink.png" alt="">
+                            <div class="filtro">
+                                <div class="info-card">
+                                    <h2 class="titulo-card">Social Media</h2>
+                                    <p class="conteudo-card">Franquia Café Flor do Grão</p>
+                                    <button>Ver Mais</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-custom">
+                        <div class="card-image">
+                            <img draggable="false" src="images/card/drink.png" alt="">
+                            <div class="filtro">
+                                <div class="info-card">
+                                    <h2 class="titulo-card">Social Media</h2>
+                                    <p class="conteudo-card">Franquia Café Flor do Grão</p>
+                                    <button>Ver Mais</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-custom">
+                        <div class="card-image">
+                            <img draggable="false" src="images/card/drink.png" alt="">
+                            <div class="filtro">
+                                <div class="info-card">
+                                    <h2 class="titulo-card">Social Media</h2>
+                                    <p class="conteudo-card">Franquia Café Flor do Grão</p>
+                                    <button>Ver Mais</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-custom">
+                        <div class="card-image">
+                            <img draggable="false" src="images/card/drink.png" alt="">
+                            <div class="filtro">
+                                <div class="info-card">
+                                    <h2 class="titulo-card">Social Media</h2>
+                                    <p class="conteudo-card">Franquia Café Flor do Grão</p>
+                                    <button>Ver Mais</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="espaco-em-baixo"></div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
