--- a/index.html
+++ b/index.html
@@ -98,28 +98,44 @@
     <!--  -->
     <div class="segunda-tela">
         <div class="container noselect">
-            <div class="row">
-                <h1 class="titulo2">Soluções</h1>
-                <h2 class="subtitulo-bold">&emsp;Marketing</h2>
-                <h2 class="conteudo">
-                    <strong>Análise</strong> <br>
-                    &emsp; Um dos pontos de partida é uma análise bem feita e em parceria com<br>
-                    os donos do negócio. E ao notarmos a necessidade da empresa, nós <br>
-                    desenvolvemos a estratégia de atuação e em quais canais a marca irá <br>
-                    aparecer; <br>
-                    &emsp; Planejamento é a chave mais importante para uma execução de <br>
-                    sucesso. <br>
-                </h2>
-                <h2 class="conteudo">
-                    <strong>Tráfego</strong> <br>
-                    &emsp; Nos primeiros passos práticos temos o *tráfego* que nada mais é que a <br>
-                    troca de verba por visibilidade, ou seja, comprar anúncios nos canais <br>
-                    escolhidos, tais como: Facebook, Instagram, Google, Youtube e entre outros;<br>
-                </h2>
-            </div>
-            <div class="posicao-grafico">
+            <h1 class="titulo2">Soluções</h1>
+            <h2 class="subtitulo-bold">&emsp;Marketing</h2>
+            <h2 class="conteudo">
+                Sempre começamos com uma boa análise e em parceria com os donos do negócio <br>
+                identificamos as necessidades da empresa, nós desenvolvemos a estratégia de <br>
+                atuação e em quais canais a marca irá aparecer afinal o o planejamento é a chave <br>
+                mais importante para uma execução de sucesso <br>
+                <br>
+                - Tráfego <br>
+                &emsp;Nos primeiros passos práticos temos o *tráfego* que nada mais é que a troca de <br>
+                verba por
+                visibilidade, ou seja, comprar anúncios nos canais escolhidos, tais como: <br>
+                Facebook, Instagram, Google, Youtube e entre outros;<br>
+                <br>
+                - Engajamento <br>
+                &emsp;Momento onde o lead (possível cliente) começa a esquentar, ou seja, ele chega <br>
+                no meio do funil, aqui ele já tem noção da dor dele, mas não necessariamente <br>
+                conhece a solução. <br>
+                <br>
+                - Conversão <br>
+                &emsp;Apresentamos a solução para o lead e ele tende a comprar o seu produto, ou <br>
+                seja, converte e vira um cliente da marca. <br>
+                <br>
+                - Retenção <br>
+                &emsp;Vender para mais clientes é bom, mas é mais caro que vender para um cliente <br>
+                que já te conhece. Por isso nós sempre procuramos reter clientes antigos, o custo <br>
+                é menor e a venda é mais fácil.
+                <br>
+            </h2>
+            <h2 class="conteudo">
+                <strong>Tráfego</strong> <br>
+                &emsp; Nos primeiros passos práticos temos o *tráfego* que nada mais é que a <br>
+                troca de verba por visibilidade, ou seja, comprar anúncios nos canais <br>
+                escolhidos, tais como: Facebook, Instagram, Google, Youtube e entre outros;<br>
+            </h2>
+            <!-- <div class="posicao-grafico">
                 <img class="grafico" src="images/grafico.png" alt="foguete" draggable="false">
-            </div>
+            </div> -->
             <div class="espaco-em-baixo"></div>
         </div>
         <div id="portfolio"></div>
@@ -129,6 +145,30 @@
     <!-- TERCEIRA TELA -->
     <!--  -->
     <div class="terceira-tela">
+        <div class="container noselect">
+                <h2 class="subtitulo-bold">&emsp;Design</h2>
+                <h2 class="conteudo">
+                    Especialista em design estratégico para marcas atuando com: <br>
+                    Identidade Visual e Posts para Social Media (redes sociais); <br>
+                </h2>
+                <h2 class="conteudo">
+                    <strong>Tráfego</strong> <br>
+                    &emsp; Nos primeiros passos práticos temos o *tráfego* que nada mais é que a <br>
+                    troca de verba por visibilidade, ou seja, comprar anúncios nos canais <br>
+                    escolhidos, tais como: Facebook, Instagram, Google, Youtube e entre outros;<br>
+                </h2>
+            <div class="posicao-grafico">
+                <img class="grafico" src="images/grafico.png" alt="" draggable="false">
+            </div>
+            <div class="espaco-em-baixo"></div>
+        </div>
+        <div id="portfolio"></div>
+    </div>
+
+    <!--  -->
+    <!-- QUARTA TELA -->
+    <!--  -->
+    <div class="quarta-tela">
         <div class="container noselect">
             <div class="row">
                 <h1 class="titulo2">Portfólio</h1>
