--- a/index.html
+++ b/index.html
@@ -146,24 +146,24 @@
     <!--  -->
     <div class="terceira-tela">
         <div class="container noselect">
-                <h2 class="subtitulo-bold">&emsp;Design</h2>
-                <h2 class="conteudo">
-                    Especialista em design estratégico para marcas atuando com: <br>
-                    Identidade Visual e Posts para Social Media (redes sociais); <br>
-                </h2>
-                <h2 class="conteudo">
-                    <strong>Tráfego</strong> <br>
-                    &emsp; Nos primeiros passos práticos temos o *tráfego* que nada mais é que a <br>
-                    troca de verba por visibilidade, ou seja, comprar anúncios nos canais <br>
-                    escolhidos, tais como: Facebook, Instagram, Google, Youtube e entre outros;<br>
-                </h2>
+            <h2 class="subtitulo-bold">&emsp;Design</h2>
+            <h2 class="conteudo">
+                Especialista em design estratégico para marcas atuando com: <br>
+                Identidade Visual e Posts para Social Media (redes sociais); <br>
+            </h2>
+            <h2 class="conteudo">
+                <strong>Tráfego</strong> <br>
+                &emsp; Nos primeiros passos práticos temos o *tráfego* que nada mais é que a <br>
+                troca de verba por visibilidade, ou seja, comprar anúncios nos canais <br>
+                escolhidos, tais como: Facebook, Instagram, Google, Youtube e entre outros;<br>
+            </h2>
             <div class="posicao-grafico">
                 <img class="grafico" src="images/grafico.png" alt="" draggable="false">
             </div>
             <div class="espaco-em-baixo"></div>
         </div>
-        <div id="portfolio"></div>
     </div>
+    <div id="portfolio"></div>
 
     <!--  -->
     <!-- QUARTA TELA -->
@@ -182,7 +182,7 @@
                             <img draggable="false" src="images/card/ice-cream.png" alt="">
                             <div class="filtro">
                                 <div class="info-card">
-                                    <h2 class="titulo-card">Social Media</h2>
+                                    <h2 class="titulo-card">Cafézumbra</h2>
                                     <p class="conteudo-card">Franquia Café Flor do Grão</p>
                                     <button>Ver Mais</button>
                                 </div>
@@ -194,8 +194,8 @@
                             <img draggable="false" src="images/card/chop.png" alt="">
                             <div class="filtro">
                                 <div class="info-card">
-                                    <h2 class="titulo-card">Soxial Midea</h2>
-                                    <p class="conteudo-card">Chope do Bacana</p>
+                                    <h2 class="titulo-card">Chope do Bacana</h2>
+                                    <p class="conteudo-card">Pra fica grógue</p>
                                     <button>Ver Mais</button>
                                 </div>
                             </div>
@@ -206,7 +206,7 @@
                             <img draggable="false" src="images/card/drink.png" alt="">
                             <div class="filtro">
                                 <div class="info-card">
-                                    <h2 class="titulo-card">Social Media</h2>
+                                    <h2 class="titulo-card">Bebidinha Quente</h2>
                                     <p class="conteudo-card">Franquia Café Flor do Grão</p>
                                     <button>Ver Mais</button>
                                 </div>
@@ -215,11 +215,11 @@
                     </div>
                     <div class="card-custom">
                         <div class="card-image">
-                            <img draggable="false" src="images/card/drink.png" alt="">
+                            <img draggable="false" src="images/card/pai.png" alt="">
                             <div class="filtro">
                                 <div class="info-card">
-                                    <h2 class="titulo-card">Social Media</h2>
-                                    <p class="conteudo-card">Franquia Café Flor do Grão</p>
+                                    <h2 class="titulo-card">Ó papai</h2>
+                                    <p class="conteudo-card">Dia dos pais é muito lindo</p>
                                     <button>Ver Mais</button>
                                 </div>
                             </div>
